--- a/W1/package.json
+++ b/W1/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "path-to-regexp": "^6.2.1",
+    "url-parse": "^1.5.10"
   }
 }
