--- a/W1/package.json
+++ b/W1/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "http-status-codes": "^2.2.0",
     "path-to-regexp": "^6.2.1",
+    "sqlite3": "^5.1.4",
     "url-parse": "^1.5.10"
   }
 }
