--- a/begirBoro/package.json
+++ b/begirBoro/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "prisma": "^4.10.1"
   },
-  "prisma":{
+  "prisma": {
     "seed": "node prisma/seed.js"
   }
 }
