--- a/begirBoro/package.json
+++ b/begirBoro/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.10.1",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "nodemon": "^2.0.20"
