--- a/begirBoro/package.json
+++ b/begirBoro/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
