--- a/expressPrismaTS/package.json
+++ b/expressPrismaTS/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:dev": "concurrently --kill-others \"tsc -w\" \"nodemon dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +16,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
