--- a/begirBoro/package.json
+++ b/begirBoro/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "helmet": "^6.1.4",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
