--- a/helloGraphql/package.json
+++ b/helloGraphql/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "mongoose": "^7.0.4"
   }
 }
