--- a/helloGraphql/package.json
+++ b/helloGraphql/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "start:dev": "nodemon ./src/index.ts",
+    "dev": "nodemon ./src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
