--- a/helloGraphql/package.json
+++ b/helloGraphql/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.ts",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "seed": "ts-node ./src/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,16 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.3",
     "graphql": "^15.3.0",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "passport": "^0.6.0",
+    "passport-local-mongoose": "^8.0.0",
+    "pug": "^3.0.2"
   }
 }
