--- a/helloSession/package.json
+++ b/helloSession/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.6.0",
     "passport-local-mongoose": "^8.0.0",
     "pug": "^3.0.2",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "set-tz": "^0.2.0"
   }
 }
