--- a/helloSocket/package.json
+++ b/helloSocket/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "hellorabbit",
+  "name": "hellosocket",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.3",
-    "argparse": "^2.0.1"
+    "express": "^4.18.2",
+    "socket.io": "^4.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
