--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -22,15 +22,18 @@
   "dependencies": {
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.1",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "bcrypt": "^5.1.0",
-    "cache-manager": "^5.2.1",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongoose": "^7.1.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuid": "^9.0.0"
