--- a/sample_uber/package.json
+++ b/sample_uber/package.json
@@ -27,7 +27,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "amqplib": "^0.10.3",
+    "amqp-connection-manager": "^4.1.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
