--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -20,10 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.4",
+    "@nestjs/apollo": "^12.0.1",
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^12.0.1",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
@@ -35,6 +38,7 @@
     "cache-manager-redis-yet": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "graphql": "^16.6.0",
     "mongoose": "^7.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
