--- a/chatUsingGRPC/package.json
+++ b/chatUsingGRPC/package.json
@@ -8,12 +8,19 @@
     "url": "https://github.com/MapsaBootCamp/fullStackJS1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:client": "nodemon client.js"
   },
   "keywords": [
     "grpc",
     "chat"
   ],
   "author": "teghfo",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "@grpc/grpc-js": "^1.8.17",
+    "@grpc/proto-loader": "^0.7.7"
+  }
 }
