--- a/sample_uber/trip/Dockerfile
+++ b/sample_uber/trip/Dockerfile
@@ -1,6 +1,7 @@
-FROM base_image_uber_rabbit
+FROM base_image_uber_rabbit_kafka
 
 COPY --chown=node:node . .
+
 
 USER root
 CMD ["npm", "run", "start:dev"]
