--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -38,6 +38,7 @@
     "cache-manager-redis-yet": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "mongoose": "^7.1.0",
     "passport": "^0.6.0",
